# ML-OPS

./: app.py  main.py  pyproject.toml
