[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-ops"
version = "0.1.0"
description = "FastAPI Machine Learning Application"
authors = ["Mikhail <mikhail.potter@mail.ru>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

[project.dependencies]
fastapi = "0.65.1"
uvicorn = "0.15.0"
joblib = "1.1.0"
numpy = "1.22.2"
pandas = "1.4.1"
sklearn = "1.0.2"
pydantic = "1.9.0"

[project.scripts]
main = "main:main"